# magnum-playground

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TECH.md  configure.cmd
assets/: uv_map.tga
modules/: FindCorrade.cmake  FindMagnum.cmake
src/: CMakeLists.txt  configure.h.cmake  main.cpp  resources.conf
src/Test/: CMakeLists.txt  DummyTest.cpp
